<package format="3">
    <name>umi_hardware</name>
    <version>0.1.0</version>
    <description>ROS2 package for UMI hardware</description>
    <maintainer email="barisyazici@alumni.sabanciuniv.edu">Baris Yazici</maintainer>
    <license>MIT</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    
    <depend>umi_robot_msgs</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
